final-project/kubernetes/istio/traffic-management/payments-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-api-v2
  namespace: meshcommerce
  labels:
    app.kubernetes.io/name: payments-api
    app.kubernetes.io/component: api
    app.kubernetes.io/version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: payments-api
      app.kubernetes.io/version: v2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: payments-api
        app.kubernetes.io/component: api
        app.kubernetes.io/version: v2
    spec:
      containers:
        - name: payments-api
          image: meshcommerce/payments-api:v2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 2
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 500m
              memory: 256Mi
